kubernetes/clusters/KC/influxdb/chronograf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: chronograf
    namespace: influxdb
spec:
    replicas: 1
    progressDeadlineSeconds: 300
    revisionHistoryLimit: 2
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: chronograf
    template:
        metadata:
            labels:
                app: chronograf
        spec:
            containers:
                - name: chronograf
                  image: chronograf:1.10
                  imagePullPolicy: Always
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQRVM2eExSS2FmWE1TTXB3
[...]
            am5gyLPkOub3HSk6QCwr1XovjtfBfbOD5tzoFhLVa/tlz70X2BMcVQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-09T15:18:59Z"
    mac: ENC[AES256_GCM,data:L6jKCaa+pPdC3g2DTkdbMyhW1LIR/2ScuObPtmac60qxx43sXmJi+5S+IIa1fKD9sYSN6rbL7XkYzHEspUH0Z9Stm7GfDZs1pp+RH5e8KMKN/0UfBNHFFGnM0Xayw/5G9Ztwrg0/rX+cgRYnFwwBxKndGELtGaJeA7KYnyRrerI=,iv:lOPbWNgXTxhBKm+CBJFtLMdMjdxDjc+8TjTf3XN/NH0=,tag:Ns/3YyOXRoS6L5JnOhq2mw==,type:str]
    pgp: []
    encrypted_regex: ^(data|env)$
    version: 3.8.1
