kubernetes/clusters/KC/influxdb/influxdb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: influxdb
spec:
  replicas: 1
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:1.8.10
        imagePullPolicy: Always
        volumeMounts:
          - name: data
            mountPath: /var/lib/influxdb
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: influxdb-data
