kubernetes/clusters/KC/influxdb/chronograf-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: chronograf
    namespace: influxdb
spec:
    selector:
        app: chronograf
    ports:
        - port: ENC[AES256_GCM,data:uocfug==,iv:i59NfIchpuZuxhogQL/TPLtvzIla197r3qW7PHi7mM4=,tag:kehz+2P8mDoSDuKozLWZZA==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXaS8rUU1OYWdGdmphVDVB
[...]
            KfdGh5NzcVa4J5EGwXjTHDnS8G8YJaLLusWhPnazC7+ErkiUxtJoJA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-09T15:18:11Z"
    mac: ENC[AES256_GCM,data:AFFK9Jhf0S4yOwVj+Q6HRK4P8KjkKMvNe3g6ZBPXSmFhjj8To8L7pol/ANTf0LNQxRYkDORIwkTionKe9xX1Nk9NMBhXZUtEKSi1ODLwnfDHMLqY2yYvmkc4qloAU8JhAssgxtzDZjiusLQ2om76q2fW1EXVQs6zcCRZkjmCv6s=,iv:YdsSJhm/VXrnPoqMXoAZ0/TiRWn/DsXz4jgQW91kmWA=,tag:bBy72XWIqp51CmHbZxbjyg==,type:str]
    pgp: []
    encrypted_regex: ^(data|ports|externalName|loadBalancerIP)$
    version: 3.8.1
