kubernetes/clusters/KC/influxdb/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: influxdb
    namespace: influxdb
spec:
    type: LoadBalancer
    loadBalancerIP: ENC[AES256_GCM,data:6qY9PrYtrgG7Sn4=,iv:gvE1nc3w9+b0rfM+jLF45FiLmKCUgw1lOWVIcy27nic=,tag:7ZSyhHgSPRcmr3ZPzCmlYw==,type:str]
    selector:
        app: influxdb
    ports:
        - port: ENC[AES256_GCM,data:S2VsYw==,iv:SOeKTLMCc4Ky2QFcdXhsyEDKt+YeTEJhJ290YU6TRhQ=,tag:AOTf1n2SrocA2EoejY9K/w==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKNm5kdWo0TjZlMkpObjI3
[...]
            231fu9bggtuxqz8gDeXtTPVY7lnXFjwr/pcQRTmkggv9ncQ2zD55HA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-09T15:18:04Z"
    mac: ENC[AES256_GCM,data:5K1GFkLYFHe4Tp6Zwfx07lSaiNo6EKSjhs6WcyA4e7sDuUbwTrO1ixy5GznNYSBTPFK2FjlF0EfIRhXMDgV5Uj3trgbHyhI4B5tPCCfj26uNytG2ExQVZ3irOB513ORNaamGqHJmFeFtfcSmUi4CtXqQ5T1NufwNNrLgJO2JFtU=,iv:vBjlnMUPkRJTK6wOB2+5DSBzTeAjt0iYuDHvTBCiuxA=,tag:EFPdkogcEobJw4NmiT8Sng==,type:str]
    pgp: []
    encrypted_regex: ^(data|ports|externalName|loadBalancerIP)$
    version: 3.8.1
