kubernetes/clusters/KC/influxdb/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: influxdb
    namespace: influxdb
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - web
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:sj7+/9bvinGuVb6SR1/jE+AGvuyLbvH9QWLaVQ==,iv:KikoeET8zSKsvkJ776YQh2UoOQAvOecKUS0InLdTAnQ=,tag:HbSSBDIPmNzp8zrFSPbf/w==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:0X6NkwVDa3g=,iv:3cry/DFZEONfxj3ndjWvHB8UgfoS9PlWw4zHcAStDzE=,tag:0O1SjRKaxHGaxc71dWco0A==,type:str]
              namespace: ENC[AES256_GCM,data:Xga8ApeToBw=,iv:+/ynSnE5V3934ONffDZG3dBV6VQnnSt8P+1HoFMOLJs=,tag:8VadsoGtwZnacmYemWfdVA==,type:str]
              port: ENC[AES256_GCM,data:iunmkQ==,iv:SFZEBeGpMj0Q+82fCvB4iT6YwQCWV+kZsyJyXd2Jjhk=,tag:J7hZZ0RahiL/fTRq2gAqEQ==,type:int]
        - match: ENC[AES256_GCM,data:YvwJWuk7YXLENuePXLVp56+tdxsFtXrWeut5I8Mn,iv:BHmwFgguMDyBzD3uudctfJsUJMIMNaa0ZtGXl9Ktyq4=,tag:Y+W/9y714oitC+ynHWXA1A==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:Cm/PjXwAUwipTA==,iv:amE492M/q4qlOI+JnjxmfCy9Oc0vOVXGDCREoZjAWz8=,tag:lQBD3J2rcIko0+5Mry1/Bg==,type:str]
              namespace: ENC[AES256_GCM,data:1DOWcFMMjPw=,iv:rilrFRZA9IQfkAEHWg4wZ3qu6FOq84oTzzll1N7UM3o=,tag:jeea/TskKBNGrPtoJZelkg==,type:str]
              port: ENC[AES256_GCM,data:A8Tcmw==,iv:cAf+2aQY2SjJXWMDWu/3PoNBKgQpCYpnGE7uN6iR8+w=,tag:YVYdfJPM4n+tqEkpXqLrmQ==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:5GfGdWW0tbghiXo=,iv:66KiLIivyBRZnmFJXJfv0Wh3+GUJulU9EsvZQsCG08E=,tag:7VMS78kDiP4o6so8bkjNoA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBblJLTmxOSE1Tc2U2QVhn
[...]
            MsMexZaSlH/hHrU9cT83p14dCAUyba0UmO2GXtNms23M9suYrP4tnA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-09T15:04:30Z"
    mac: ENC[AES256_GCM,data:h8C6muYRkV/Sq4altFjvkeGxM29kzvhp15Bg6ucHd3PPIkX5tRqoZaSZ+A8kUVmyVpSOJQS2nnMToY4+PV/Hrfalw2Hr+fCe2Y5JI4b8kRRkEc7SVBOiTgcO2wgPIi5NJB2N0EeBgMQq14FZN8txfn52SLqGiQ9Cr9oX/HCMTMc=,iv:47AIuHjd6hukqmoRzBFEsPi5KcmAirXmqPPQGDtCINw=,tag:V3zckeP6J58Ahc7TPCub7w==,type:str]
    pgp: []
    encrypted_regex: ^(data|match|secretName|services)$
    version: 3.8.1
